# notch

./: .gitignore  Cargo.toml  README.ja.md  README.md  deny.toml
.claude/workspace/planning/2026-03-16-query/: sow.md  spec.md
.github/workflows/: ci.yml  release.yml
src/: client.rs  lib.rs  main.rs  markdown.rs  sanitize.rs  types.rs  types_tests.rs
src/types/: tests.rs
tests/: api_test.rs  cli_integration.rs
