[package]
name = "notch"
version = "0.4.0"
edition = "2021"
description = "Notion Page to Markdown CLI"
license = "MIT"
repository = "https://github.com/thkt/notch"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
url = "2.5.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
wiremock = "0.6.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
